--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			<version>2.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
